fixed alignment of displayed objects to be easier to view.

--- a/css/navigator.css
+++ b/css/navigator.css
@@ -47,7 +47,6 @@ color:aliceblue
   .mainChoice {
     padding: 1vmax 1vmax 2vmax .2vmax;
     text-decoration: none;
-    font-size: 25px;
     color: black;
     display: block;
     transition: 0.3s;
@@ -149,9 +148,9 @@ color: aliceblue;
   "TTSucBut"
   "PDFBut"
   "VCareBut";
-  width: 99vmax;
+  width: 100%;
   height:4vmax;
-font-size: 2vmax;
+font-size: 1.5vmax;
 text-align: center;
 }
 
@@ -221,10 +220,11 @@ grid-area: kneeSection;
 }
 
 .myItemNavigator{
+  position: fixed;
   height: 100%;
   width: 16vmax;
   z-index: 1;
-  top: 0;
+  /* top: 0; */
   left: 0;
   overflow-x: hidden;
   transition: 0.5s;
@@ -236,17 +236,17 @@ grid-area: kneeSection;
   
 #main{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr ;
   grid-template-rows: auto;
   grid-template-areas: 
-  "mainNavigator showSection showSection"
-  "mainNavigator kneeSection kneeSection"
-  "mainNavigator footSection footSection"
-  "mainNavigator linerSection linerSection"
-  "mainNavigator pxCompSection1 pxCompSection1"
-  "mainNavigator pxCompSection2 pxCompSection2"
-  "mainNavigator pxCompSection3 pxCompSection3"
-  "mainNavigator mainShowSection mainShowSection"
+  "mainNavigator showSection "
+  "mainNavigator kneeSection "
+  "mainNavigator footSection "
+  "mainNavigator linerSection "
+  "mainNavigator pxCompSection1 "
+  "mainNavigator pxCompSection2 "
+  "mainNavigator pxCompSection3 "
+  "mainNavigator mainShowSection "
 
 ;
 }
@@ -266,10 +266,35 @@ grid-template-rows: auto;
 
 
 
+@media screen and (max-width: 768px){
 
+  .mainpage{
+    display: grid;
+  justify-content: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  
+  }
 
+  #main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "mainNavigator showSection showSection"
+    "mainNavigator kneeSection kneeSection"
+    "mainNavigator footSection footSection"
+    "mainNavigator linerSection linerSection"
+    "mainNavigator pxCompSection1 pxCompSection1"
+    "mainNavigator pxCompSection2 pxCompSection2"
+    "mainNavigator pxCompSection3 pxCompSection3"
+    "mainNavigator mainShowSection mainShowSection"
+  
+  ;
+  }
 
-
+  
+}
 
 
 
@@ -311,11 +336,18 @@ grid-template-rows: auto;
       display: block;
       transition: 0.3s;
       width: 100%;
+      position: initial;
     }
 
     .mobileNavigationBut{display: none;}
 
-
+    .mainpage{
+      display: grid;
+    justify-content: center;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    
+    }
 
     .mobileNav{
       display: block;
@@ -422,7 +454,7 @@ grid-template-rows: auto;
   .mainChoice {
     padding: 1vmax 1vmax 2vmax .2vmax;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 1.5vmax;
     color: black;
     display: block;
     transition: 0.3s;
